Fix Mobile Issue on Homepage Grades ( paragraphs was missing padding ).  Also made requested copy changes and swapped out a chart.

--- a/resources/assets/sass/_responsive-mobile.scss
+++ b/resources/assets/sass/_responsive-mobile.scss
@@ -808,6 +808,10 @@
     .section.grades {
         padding-bottom: 50px;
 
+        .summary {
+            padding: 0 20px 20px 20px;
+        }
+
         h1.title {
             padding-left: 20px;
             padding-right: 20px;
